# simple-voice-agent

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: agent_identity.py  backend.py  base_agent.py  livekit_agent.py  llm.py  main.py  mixins.py  rag.py  support.py  twilio_agent.py  utils.py
data/: wise_faq.json
docs/: architecture.md
scripts/: create_livekit_dispatch_rule.sh  ingest_faq.py  run_livekit_agent.sh  setup.sh
tests/: retrieval_test.sh  test_llm.py
